--- a/CourseFiles/Positions/OverlapingElemente.html
+++ b/CourseFiles/Positions/OverlapingElemente.html
@@ -12,16 +12,19 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Position: fixed;</h3>
+    <h3>Overlaping Elements</h3>
   </nav>
   <main>
-
-  <p class="para graph">paragraph 1</p>
-  <p class="para graph">paragraph 2</p>
-  <p class="para graph">paragraph 3</p>
-  <p class="para graph">paragraph 4</p>
-  <p class="para graph">paragraph 5</p>
-
-</main>
+    <!-- Lesson files -->
+    <div class="rel">
+      <div class="abs abs1">
+        abs1
+      </div>
+      <div class="abs abs2">
+        abs2
+      </div>
+    </div>
+    <!-- Lesson files -->
+  </main>
 </body>
 </html>
