--- a/CourseFiles/Overflow/OverflowAuto.html
+++ b/CourseFiles/Overflow/OverflowAuto.html
@@ -12,12 +12,11 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Overflow: hidden;</h3>
+    <h3>Overflow: auto;</h3>
   </nav>
   <main>
     <!-- Lesson files -->
-    <div style="height: 200px"></div>
-    <div style="width: 200%; border: 1px solid red;">test</div>
+    <div style="height: 100px; border: 2px solid green; overflow: auto;">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum deserunt aliquid id et beatae libero impedit, assumenda voluptatibus ad harum accusantium fuga! Nobis facilis sed cumque placeat excepturi repellat perferendis recusandae accusamus debitis, eius ea soluta dolores harum beatae quas magni! Labore itaque fuga ut delectus! Tenetur praesentium nesciunt placeat.
       
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum deserunt aliquid id et beatae libero impedit, assumenda voluptatibus ad harum accusantium fuga! Nobis facilis sed cumque placeat excepturi repellat perferendis recusandae accusamus debitis, eius ea soluta dolores harum beatae quas magni! Labore itaque fuga ut delectus! Tenetur praesentium nesciunt placeat.
