--- a/CourseFiles/FloatClear/Opacity.html
+++ b/CourseFiles/FloatClear/Opacity.html
@@ -12,13 +12,17 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Attribute Selectors</h3>
+    <h3>Opacity</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->   
-   
-    
+    before text
+    <div style='display: block; border: 10px solid blue; background-color: red; width: 300px; height: 300px; opacity: 0.15; position: relative; top: -80px; z-index: -1'>
+      <!-- with  z-index: -1 ;  I can grab the text-->
+      test
+    </div>
+    after text
 
     <!-- Lesson files -->
   </main>
