--- a/CourseFiles/AdvancedSelectors/ContainsValue.html
+++ b/CourseFiles/AdvancedSelectors/ContainsValue.html
@@ -12,12 +12,22 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Disabled</h3>
+    <h3>Advanced Selector: Contains Value</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <input type="text disabled">
+
+    <form action="/login">
+      <label for="">Name</label>
+      <input type="text">
+      <label for="">Email</label>
+      <input type="email">
+      <i class="fa fa-question-circle" title="We don't sell your email. You can trust us."></i>
+      <button type="submit">Submit</button>
+    </form>
+   
+    
 
     <!-- Lesson files -->
   </main>
