--- a/CourseFiles/PseudoSelectors/Checked.html
+++ b/CourseFiles/PseudoSelectors/Checked.html
@@ -12,12 +12,20 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Disabled</h3>
+    <h3>Pseudo Selectors: Checked</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <input type="text disabled">
+
+    <input type="checkbox" id="cbox">
+    <div class="demo">
+      This is my demo content. 
+    </div>
+
+    <label for="cbox" style="position: relative; bottom: -50px;">
+      <span style="background-color: grey; color: black; padding: 5px; display: inline-block;">Click this button</span>
+    </label>
 
     <!-- Lesson files -->
   </main>
