--- a/CourseFiles/PseudoSelectors/LastChild.html
+++ b/CourseFiles/PseudoSelectors/LastChild.html
@@ -12,12 +12,20 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Disabled</h3>
+    <h3>Pseudo Selectors: Last Child</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <input type="text disabled">
+
+    <div id="demo-area">
+      <p>Paragraph1</p>
+      <p>Paragraph2</p>
+      <span>span1</span>
+      <span>span2</span>
+      <span>span3</span>
+      <p>Paragraph3</p>
+    </div>
 
     <!-- Lesson files -->
   </main>
