--- a/CourseFiles/master.html
+++ b/CourseFiles/master.html
@@ -12,12 +12,13 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Disabled</h3>
+    <h3>Advanced Selector: Starts With</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <input type="text disabled">
+
+    
 
     <!-- Lesson files -->
   </main>
