--- a/CourseFiles/AdvancedSelectors/StartsWith.html
+++ b/CourseFiles/AdvancedSelectors/StartsWith.html
@@ -12,14 +12,25 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Disabled</h3>
+    <h3>Advanced Selector: Starts With</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <input type="text disabled">
+
+    <form action="/login">
+      <label for="">Name</label>
+      <input type="text">
+      <label for="">Email</label>
+      <input type="email">
+      <i class="fa fa-question-circle" title="We don't sell your email. You can trust us."></i>
+      <button type="submit">Submit</button>
+      <a href="/register.html">Register</a>
+      <a href="benefits.pdf">Benefits.pdf</a>
+    </form>
+   
+    
 
     <!-- Lesson files -->
   </main>
 </body>
-</html>
