--- a/CourseFiles/PseudoSelectors/FirstChild.html
+++ b/CourseFiles/PseudoSelectors/FirstChild.html
@@ -12,12 +12,21 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Disabled</h3>
+    <h3>Pseudo Selectors: First Child</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <input type="text disabled">
+
+    <p class="child">Outside #1 child p</p>
+
+    <div id="parent">
+      <p class="child">First child p</p>
+      <p class="child">Second child p</p>
+      <p class="child">Third child p</p>
+    </div>
+    
+    <p class="child">Outside #2 child p</p>
 
     <!-- Lesson files -->
   </main>
