--- a/CourseFiles/PseudoSelectors/Focus.html
+++ b/CourseFiles/PseudoSelectors/Focus.html
@@ -12,12 +12,13 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Disabled</h3>
+    <h3>Pseudo Selectors: Focus</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <input type="text disabled">
+
+    <input type="" class="test">
 
     <!-- Lesson files -->
   </main>
