--- a/CourseFiles/PseudoSelectors/Disabled.html
+++ b/CourseFiles/PseudoSelectors/Disabled.html
@@ -12,18 +12,17 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Pseudo Selectors: Not</h3>
+    <h3>Pseudo Selectors: Disabled</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-    <p class="para graph">paragraph 1</p>
-    <p class="para graph">paragraph 2</p>
-    <p class="para">paragraph 3</p>
-    <p class="para graph">paragraph 4</p>
-    <p class="para graph">paragraph 5</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid sunt, <span class="color blue">quisquam modi</span> quas ipsa magnam nulla <span class="color red">nesciunt</span>corrupti sit facilis optio. Culpa, voluptatum praesentium nam eveniet ipsa voluptas odit vitae cupiditate <span class="color purple">suscipit consectetur</span> cumque dicta doloribus iste amet beatae?</p>
+    <input type="text" disabled="disabled">
+
+    <div class="disabled">
+      test
+    </div>
 
     <!-- Lesson files -->
   </main>
