--- a/CourseFiles/CSS1-CSS2/PseudoElements/After.html
+++ b/CourseFiles/CSS1-CSS2/PseudoElements/After.html
@@ -12,12 +12,21 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>The Project</h3>
+    <h3>Pseudo Elements::After</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
+<!-- The double colon is a Pseudo Element -->
 
+    <p>Welcome to my website. This is where I code website. For more information  <a href="https://website.com/read-more.html">Click here</a></p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.
+
+      <span class="label deal">$89.99</span>
+    </p>
+
+    <div class="block"></div>
 
     <!-- Lesson files -->
   </main>
