--- a/CourseFiles/CSS1-CSS2/PseudoElements/Before.html
+++ b/CourseFiles/CSS1-CSS2/PseudoElements/Before.html
@@ -12,12 +12,13 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>The Project</h3>
+    <h3>Pseudo Elements::Before</h3>
   </nav>
   <main>
     <hr>
     <!-- Lesson files -->
-
+<!-- The double colon is a Pseudo Element -->
+    <div class="block"></div>
 
     <!-- Lesson files -->
   </main>
