--- a/CourseFiles/CSS3/Colors/RGBA.html
+++ b/CourseFiles/CSS3/Colors/RGBA.html
@@ -12,15 +12,15 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Repeating Radial Gradients</h3>
+    <h3>RGBA</h3>
   </nav>
   <main>
     <hr style="width: 50%;">
     <!-- Lesson files -->
 
-    <div class="box">
-      test
-    </div>
+    <p class="half">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem tenetur, optio maxime quidem incidunt omnis debitis! Tenetur cupiditate enim debitis eligendi beatae, provident impedit quidem assumenda, quos accusantium eaque?
+    </p>
 
     <!-- Lesson files -->
   </main>
