--- a/CourseFiles/CSS3/RoundedCorners/BorderRadius.html
+++ b/CourseFiles/CSS3/RoundedCorners/BorderRadius.html
@@ -12,16 +12,14 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Repeating Radial Gradients</h3>
+    <h3>Border Radius</h3>
   </nav>
   <main>
-    <hr style="width: 50%;">
+    <hr>
     <!-- Lesson files -->
 
-    <div class="box">
-      test
+    <div style="display: inline-block; width: 100%; height: 300px; border: 10px solid red; border-radius: 10px;">
     </div>
-
     <!-- Lesson files -->
   </main>
 </body>
