--- a/CourseFiles/CSS3/RoundedCorners/RoundingCorners.html
+++ b/CourseFiles/CSS3/RoundedCorners/RoundingCorners.html
@@ -12,15 +12,24 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Repeating Radial Gradients</h3>
+    <h3>Rounding Corners</h3>
   </nav>
   <main>
-    <hr style="width: 50%;">
+    <hr>
     <!-- Lesson files -->
+    
+    <img src="../img/peasant.jpeg" alt="head" class="round">
 
-    <div class="box">
-      test
-    </div>
+    <hr>
+
+    <div class="stone"></div>
+
+    <hr>
+
+    <div class="stone1"></div>
+
+    
+
 
     <!-- Lesson files -->
   </main>
