--- a/CourseFiles/CSS3/BackgroundImages/MultipleBackgroungImages.html
+++ b/CourseFiles/CSS3/BackgroundImages/MultipleBackgroungImages.html
@@ -12,15 +12,13 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Repeating Radial Gradients</h3>
+    <h3>Two Background Images</h3>
   </nav>
   <main>
     <hr style="width: 50%;">
     <!-- Lesson files -->
 
-    <div class="box">
-      test
-    </div>
+    <div class="stone"></div>
 
     <!-- Lesson files -->
   </main>
