--- a/CourseFiles/CSS3/Colors/HueSaturationLightnes.html
+++ b/CourseFiles/CSS3/Colors/HueSaturationLightnes.html
@@ -12,15 +12,17 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Repeating Radial Gradients</h3>
+    <h3>HUE SATURATION LIGHTNESS</h3>
   </nav>
   <main>
     <hr style="width: 50%;">
     <!-- Lesson files -->
 
-    <div class="box">
-      test
-    </div>
+    <h3>HSL</h3>
+
+    <p class="para">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem tenetur, optio maxime quidem incidunt omnis debitis! Tenetur cupiditate enim debitis eligendi beatae, provident impedit quidem assumenda, quos accusantium eaque?
+    </p>
 
     <!-- Lesson files -->
   </main>
