--- a/CourseFiles/CSS3/Colors/OpacityVsAlpha.html
+++ b/CourseFiles/CSS3/Colors/OpacityVsAlpha.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,14 +13,17 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Repeating Radial Gradients</h3>
+    <h3>Opacity Vs Alpha</h3>
   </nav>
   <main>
     <hr style="width: 50%;">
     <!-- Lesson files -->
 
-    <div class="box">
-      test
+    <div class="box opa">
+      OPACITY 
+    </div>
+    <div class="box alpha">
+      ALPHA
     </div>
 
     <!-- Lesson files -->
