--- a/CourseFiles/CSS3/Gradients/LinearGradients.html
+++ b/CourseFiles/CSS3/Gradients/LinearGradients.html
@@ -12,7 +12,7 @@
 <body id="body">
   <nav>
     <h1>2020 Bootcamp</h1>
-    <h3>Repeating Radial Gradients</h3>
+    <h3>Linear Gradients</h3>
   </nav>
   <main>
     <hr style="width: 50%;">
