--- a/CourseFiles/CSS3/TextFormating/WordWrap.html
+++ b/CourseFiles/CSS3/TextFormating/WordWrap.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2020 Bootcamp</title> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,300;1,500;1,700&display=swap" rel="stylesheet">
   <script src="js/app.js"></script>
 </head>
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Custom Fonts</h3>
+    <h3 class="shadows">Word Wrap</h3>
   </nav>
   <main class="">
     <hr style="width: 50%;">
     <!-- Lesson files -->
 
     <div class="text-area">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maiores magnam cum perferendis sint laudantium delectus culpa provident libero nihil repellendus, vel, sequi ipsa alias reiciendis, veritatis molestias esse. Perferendis laborum id debitis dolores commodi animi sunt ipsum, eveniet unde recusandae aperiam omnis blanditiis quam nisi doloribus officiis dolore rerum?
+      The quick brown fox jumped over the lazy dogssssssssssssssssssssssssssssssss.
+    </div>
 
     <!-- Lesson files -->
   </main>
