--- a/CourseFiles/CSS3/Transformations/MultipleTransformations.html
+++ b/CourseFiles/CSS3/Transformations/MultipleTransformations.html
@@ -11,7 +11,7 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows"> 3D Transformations</h3>
+    <h3 class="shadows"> Multiple Transformations</h3>
   </nav>
   <main class="">
     <hr style="width: 50%;">
