--- a/CourseFiles/CSS3/Transformations/TransformScale.html
+++ b/CourseFiles/CSS3/Transformations/TransformScale.html
@@ -11,13 +11,23 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows"> 3D Transformations</h3>
+    <h3 class="shadows">Transform Scale</h3>
   </nav>
   <main class="">
     <hr style="width: 50%;">
     <!-- Lesson files -->
 
-    <div class="box">SOME TEXT</div>
+    <div class="box">
+      My Scaling Div
+    </div>
+
+    <div class="box scale">
+      Scale Me
+    </div>
+
+    <div class="box">
+      My Scaling Div
+    </div>
     
   </main>
 </body>
