--- a/CourseFiles/CSS3/Transitions/TransitionDelay.html
+++ b/CourseFiles/CSS3/Transitions/TransitionDelay.html
@@ -11,14 +11,15 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows"> 3D Transformations</h3>
+    <h3 class="shadows">Transition Delay</h3>
   </nav>
   <main class="">
     <hr style="width: 50%;">
-    <!-- Lesson files -->
+    <!-- Lesson files -->  
 
-    <div class="box">SOME TEXT</div>
-    
+    <div class="parent">
+      <div class="child">test</div>
+    </div>
   </main>
 </body>
 </html>
