--- a/CourseFiles/CSS3/Transitions/TransitionSizes.html
+++ b/CourseFiles/CSS3/Transitions/TransitionSizes.html
@@ -11,14 +11,15 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows"> 3D Transformations</h3>
+    <h3 class="shadows">Transitioning Colors</h3>
   </nav>
   <main class="">
     <hr style="width: 50%;">
     <!-- Lesson files -->
 
-    <div class="box">SOME TEXT</div>
+    <div class="box">TEXT</div>
     
+    <!-- Lesson files -->
   </main>
 </body>
 </html>
