--- a/Badindex.html
+++ b/Badindex.html
@@ -14,14 +14,13 @@
     <h3 class="shadows">Animation Iterration Count</h3>
   </nav>
 
-  <main>
-    <hr>
+
+  <main id="main">
+    <hr style="width: 50%;">
     <!-- Lesson files -->
-    
-    <!-- Lesson files -->
+
+   test
+   <!-- Lesson files -->
   </main>
-  <footer>
-    <h3 style="color: rgb(11, 11, 236); text-align:center;">My Footer</h3>
-  </footer>
 </body>
 </html>
