--- a/CourseFiles/CSS3/Animations/Blinking.html
+++ b/CourseFiles/CSS3/Animations/Blinking.html
@@ -11,17 +11,14 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Animation Iterration Count</h3>
+    <h3 class="shadows">Blinking Animation</h3>
   </nav>
+  <main class="">
+    <hr style="width: 50%;">
+    <!-- Lesson files -->
 
-  <main>
-    <hr>
-    <!-- Lesson files -->
+    <div class="box">SOME TEXT</div>
     
-    <!-- Lesson files -->
   </main>
-  <footer>
-    <h3 style="color: rgb(11, 11, 236); text-align:center;">My Footer</h3>
-  </footer>
 </body>
 </html>
