--- a/CourseFiles/CSS3/Animations/IterationCount.html
+++ b/CourseFiles/CSS3/Animations/IterationCount.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -13,15 +12,16 @@
     <h1 class="shadows">2020 Bootcamp</h1>
     <h3 class="shadows">Animation Iterration Count</h3>
   </nav>
+  <main class="">
+    <hr style="width: 50%;">
+    <!-- Lesson files -->
 
-  <main>
-    <hr>
-    <!-- Lesson files -->
+    <div class="box count-4">SOME TEXT</div>
+
+    <div class="box count-6">
+      <h2>HI Richy</h2>
+    </div>
     
-    <!-- Lesson files -->
   </main>
-  <footer>
-    <h3 style="color: rgb(11, 11, 236); text-align:center;">My Footer</h3>
-  </footer>
 </body>
 </html>
