--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Lesson files -->
   </main>
   <footer>
-    <h3 style="color: rgb(11, 11, 236); text-align:center;">My Footer</h3>
+    Copyright &copy; 2019 All rights reserved | Carl R. Matson
   </footer>
 </body>
 </html>
