switching to Linux

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <!-- Lesson files -->
     
     <!-- Lesson files -->
+    <hr>
   </main>
-  <footer>
-    Copyright &copy; 2019 All rights reserved | Carl R. Matson
+  <footer class="">
+    <div class="shadows">
+      Copyright &copy; 2019 All rights reserved | Carl R. Matson
+    </div>
   </footer>
 </body>
 </html>
