--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Animation Iterration Count</h3>
+    <h3 class="shadows">Animation Mini Project</h3>
   </nav>
 
   <main>
     <hr>
-    <!-- Lesson files -->
-    
-    <!-- Lesson files -->
+
+  <div class="box">test</div>
+
     <hr>
   </main>
   <footer class="">
