switching to win10

--- a/CourseFiles/CSS3/Misc/Columns.html
+++ b/CourseFiles/CSS3/Misc/Columns.html
@@ -11,14 +11,13 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Resize</h3>
+    <h3 class="shadows">Columns</h3>
   </nav>
 
   <main>
     <hr>
-   <div style='width: 200px; border: 1px solid red'>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-   </div>
+    <!--not recommended -->
+    <p id="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum magni, ad obcaecati, perferendis eaque ratione molestiae tempora soluta eius debitis omnis nihil, reiciendis molestias sunt accusamus tempore dignissimos minus ducimus. A, veniam quia illo quidem libero vero fugit minus alias dolorem ipsam odio velit rerum aut, laudantium quaerat recusandae nulla!</p>
 
     <hr>
   </main>
