--- a/CourseFiles/CSS3/Misc/Resize.html
+++ b/CourseFiles/CSS3/Misc/Resize.html
@@ -11,20 +11,15 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox</h3>
+    <h3 class="shadows">Resize</h3>
   </nav>
 
   <main>
     <hr>
-    <!-- Learning code area -->
+   <div style='width: 200px; padding: 20px; border: 1px solid red; height: 200px;'>
+    <textarea name="" id="" cols="30" rows="10" style="width: 100%;"></textarea>
+   </div>
 
-    <style>
-      element{
-        display: flex;
-      }
-    </style>
-
-   <!-- Learning code area -->
     <hr>
   </main>
   <footer class="">
