--- a/CourseFiles/CSS3/Misc/BoxSizing.html
+++ b/CourseFiles/CSS3/Misc/BoxSizing.html
@@ -11,19 +11,15 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox</h3>
+    <h3 class="shadows">Box Sizing</h3>
   </nav>
 
   <main>
     <hr>
     <!-- Learning code area -->
+    <div class="box1">Content Box</div>
 
-    <style>
-      element{
-        display: flex;
-      }
-    </style>
-
+    <div class="box2">Border Box</div>
    <!-- Learning code area -->
     <hr>
   </main>
