--- a/CourseFiles/CSS3/Flexbox/AlignContent.html
+++ b/CourseFiles/CSS3/Flexbox/AlignContent.html
@@ -17,21 +17,17 @@
   <main>
     <hr>
     <!-- Learning code area -->
-    <!-- Flex container -->
-    <nav class="nav">
 
-      <div class="brand">
-        <!-- Flex Item -->
+      <div class="flex">
+        <div class="col col1">Column 1</div>
+        <div class="col col2">Column 2</div>
+        <div class="col col3">Column 3</div>
+        <div class="col col4">Column 4</div>
+        <div class="col col1">Column 5</div>
+        <div class="col col2">Column 6</div>
+        <div class="col col3">Column 7</div>
+        <div class="col col4">Column 8</div>
       </div>
-      <div class="nav-buttons">
-        <!-- Flex Item -->
-      </div>
-    </nav>
-
-    <div class="body">
-      <!-- Flex Container -->
-    </div>
-
 
    <!-- Learning code area -->
     <hr>
