--- a/CourseFiles/CSS3/Flexbox/AlignSelf.html
+++ b/CourseFiles/CSS3/Flexbox/AlignSelf.html
@@ -11,27 +11,19 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox: Align Content</h3>
+    <h3 class="shadows">Flexbox: Align Self</h3>
   </nav>
 
   <main>
     <hr>
     <!-- Learning code area -->
-    <!-- Flex container -->
-    <nav class="nav">
 
-      <div class="brand">
-        <!-- Flex Item -->
+      <div class="flex">
+        <div class="col col1">Column1</div>
+        <div class="col col2">Column2</div>
+        <div class="col col3">Column3</div>
+        <div class="col col4">Column4</div>
       </div>
-      <div class="nav-buttons">
-        <!-- Flex Item -->
-      </div>
-    </nav>
-
-    <div class="body">
-      <!-- Flex Container -->
-    </div>
-
 
    <!-- Learning code area -->
     <hr>
