--- a/CourseFiles/CSS3/Flexbox/Basis.html
+++ b/CourseFiles/CSS3/Flexbox/Basis.html
@@ -11,27 +11,36 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox: Align Content</h3>
+    <h3 class="shadows">Flexbox: Basis</h3>
   </nav>
 
   <main>
     <hr>
     <!-- Learning code area -->
-    <!-- Flex container -->
-    <nav class="nav">
 
-      <div class="brand">
-        <!-- Flex Item -->
-      </div>
-      <div class="nav-buttons">
-        <!-- Flex Item -->
-      </div>
-    </nav>
+    <div class="row">
 
-    <div class="body">
-      <!-- Flex Container -->
+      <div class="col col1">
+        New Column
+      </div>
+
     </div>
 
+    <div class="row">
+
+      <div class="col col2">
+        New Column
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col col3">
+        New Column
+      </div>
+
+    </div>
 
    <!-- Learning code area -->
     <hr>
