--- a/CourseFiles/CSS3/Flexbox/Order.html
+++ b/CourseFiles/CSS3/Flexbox/Order.html
@@ -11,27 +11,25 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox: Align Content</h3>
+    <h3 class="shadows">Flexbox: Order</h3>
   </nav>
 
   <main>
     <hr>
     <!-- Learning code area -->
-    <!-- Flex container -->
-    <nav class="nav">
 
-      <div class="brand">
-        <!-- Flex Item -->
-      </div>
-      <div class="nav-buttons">
-        <!-- Flex Item -->
-      </div>
-    </nav>
+    <div class="flex-parent">
 
-    <div class="body">
-      <!-- Flex Container -->
+<div class="box1">
+  Column #1
+</div>
+<div class="box2">
+  Column #2
+</div>
+<div class="box3">
+  Column #3 
+</div>
     </div>
-
 
    <!-- Learning code area -->
     <hr>
