--- a/CourseFiles/CSS3/Flexbox/VerticalAlign.html
+++ b/CourseFiles/CSS3/Flexbox/VerticalAlign.html
@@ -11,27 +11,16 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox: Align Content</h3>
+    <h3 class="shadows">Flexbox: Vertical Align</h3>
   </nav>
 
   <main>
     <hr>
     <!-- Learning code area -->
-    <!-- Flex container -->
-    <nav class="nav">
 
-      <div class="brand">
-        <!-- Flex Item -->
+      <div class="big-box">
+        Hello. I'm a box!
       </div>
-      <div class="nav-buttons">
-        <!-- Flex Item -->
-      </div>
-    </nav>
-
-    <div class="body">
-      <!-- Flex Container -->
-    </div>
-
 
    <!-- Learning code area -->
     <hr>
