--- a/CourseFiles/CSS3/Flexbox/Wrap.html
+++ b/CourseFiles/CSS3/Flexbox/Wrap.html
@@ -11,27 +11,26 @@
 <body id="body">
   <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox: Align Content</h3>
+    <h3 class="shadows">Flexbox: Wrap</h3>
   </nav>
 
   <main>
     <hr>
     <!-- Learning code area -->
-    <!-- Flex container -->
-    <nav class="nav">
 
-      <div class="brand">
-        <!-- Flex Item -->
+      <div class="row">
+        <div class="col-75">
+          75% Basis. Cannot grow or shrink.
+        </div>
+
+        <div class="col-75">
+          75% Basis. Cannot grow or shrink.
+        </div>
+
+        <div class="col-75">
+          75% Basis. Cannot grow or shrink.
+        </div>
       </div>
-      <div class="nav-buttons">
-        <!-- Flex Item -->
-      </div>
-    </nav>
-
-    <div class="body">
-      <!-- Flex Container -->
-    </div>
-
 
    <!-- Learning code area -->
     <hr>
