--- a/index.html
+++ b/index.html
@@ -9,63 +9,16 @@
   <script src="js/app.js"></script>
 </head>
 <body id="body">
-  <!-- <nav class="">
+  <nav class="">
     <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox: Layout Project #1</h3>
-  </nav> -->
+    <h3 class="shadows">Responsive Web Design</h3>
+  </nav>
 
   <main>
-    <hr>
-    <!-- Learning code area -->
-    <!-- Flex container -->
-    <nav class="nav">
-      <!-- Flex Item -->
-      <a href="/" class="brand">
-        CSS Course
-      </a>
-      
-      <div class="nav-buttons">
-        <!-- Flex Item -->
-        <a href="/register">Sign Up</a>
-        <a href="/login">Login</a>
-      </div>
-    </nav>
+    <h6>Lesson Area</h6>
 
-    <!-- Flex Container -->
-    <div class="body">
-      <div class="left-column">
-        <!-- Flex Item -->
-        Left Column
-      </div>
-      <div class="center-column">
-        <!-- Flex Item -->
-        Body Content
-      </div>
-      <div class="right-column">
-        <!-- Flex Item -->
-        Advertisement content in here.
-      </div>
-
-    </div>
-
-    <!-- Flex Container -->
-    <footer class="footer">
-      <div>
-        Column 1
-      </div>
-      <div>
-        Column 2
-      </div>
-      <div>
-        Column 3
-      </div>
-      <div>
-        Column 4
-      </div>
-    </footer>
-
-   <!-- Learning code area -->
-    <hr>
+    
+    <h6>Lesson Area</h6>
   </main>
   <footer class="">
     <div class="shadows">
