switching to win 10

--- a/index.html
+++ b/index.html
@@ -11,20 +11,67 @@
 </head>
 
 <body id="body">
-    <nav class="">
-        <h1 class="shadows">2020 Bootcamp</h1>
-        <h3 class="shadows">Responsive Web Design</h3>
-    </nav>
+    <!-- <nav class="">
+    <h1 class="shadows">2020 Bootcamp</h1>
+    <h3 class="shadows">Flexbox: Layout Project #1</h3>
+  </nav> -->
 
+    <h1>CSS Course</h1>
     <main>
-        <h6>Lesson Area</h6>
+        <hr>
+        <!-- Learning code area -->
+        <!-- Flex container -->
+        <nav class="nav">
+            <div class="brand">
+                <!-- Flex Item -->
+            </div>
+            <div class="nav-buttons">
+                <!-- Flex Item -->
+                <a href="/register">Sign Up</a>
+                <a href="/login">Login</a>
+            </div>
+            <a href="/" class="brand">CSS Course</a>
 
-        <h6>Lesson Area</h6>
+        </nav>
+
+        <!-- Flex Container -->
+        <div class="body">
+            <div class="left-column">
+                <!-- Flex Item -->
+                <h4>Navigation</h4>
+
+                <div class="center-column">
+                    <!-- Flex Item -->
+                    <h1>Hello World!</h1>
+                    <div class="right-column">
+                        <div class="adv"></div>
+                    </div>
+
+                </div>
+
+                <!-- Flex Container -->
+                <footer class="footer">
+                    <div>
+                        Column 1
+                    </div>
+                    <div>
+                        Column 2
+                    </div>
+                    <div>
+                        Column 3
+                    </div>
+                    <div>
+                        Column 4
+                    </div>
+                </footer>
+
+                <!-- Learning code area -->
+                <hr>
     </main>
     <footer class="">
-        <div class="shadows">
-            Copyright &copy; 2019 All rights reserved | Carl R. Matson
-        </div>
+        <!-- <div class="shadows">
+      Copyright &copy; 2019 All rights reserved | Carl R. Matson
+    </div> -->
     </footer>
 </body>
 
