--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3 class="shadows">Flexbox: Layout Project #1</h3>
   </nav> -->
 
-  <h1>Flexbox1</h1>
+  <h1>Flexbox</h1>
   <main>
     <hr>
     <!-- Learning code area -->
@@ -36,11 +36,15 @@
     <div class="body">
       <div class="left-column">
         <!-- Flex Item -->
-        Left Column
+       <h4>Navigation</h4>
+        <a href="">Nav 1</a>
+        <a href="">Nav 2</a>
+        <a href="">Nav 3</a>
       </div>
       <div class="center-column">
         <!-- Flex Item -->
-        Body Content
+        <h1>Hello World!</h1>
+        <p>This is a responsive website</p>
       </div>
       <div class="right-column">
         <!-- Flex Item -->
