--- a/CourseFiles/CSS3/Flexbox/PrintMode.html
+++ b/CourseFiles/CSS3/Flexbox/PrintMode.html
@@ -16,7 +16,7 @@
     <h3 class="shadows">Flexbox: Layout Project #1</h3>
   </nav> -->
 
-    <h1>Flexbox Multiple Media Queries</h1>
+    <h1>Flexbox</h1>
     <main>
         <hr>
         <!-- Learning code area -->
@@ -24,18 +24,15 @@
         <nav class="nav">
             <div class="brand">
                 <!-- Flex Item -->
-                CSS Course
             </div>
             <div class="nav-buttons">
                 <!-- Flex Item -->
                 <a href="/register">Sign Up</a>
                 <a href="/login">Login</a>
             </div>
-        </nav>
-        <div class="blue">
-            Blue section here.
-        </div>
+            <a href="/" class="brand">CSS Course</a>
 
+        </nav>
 
         <!-- Flex Container -->
         <div class="body">
