--- a/index.html
+++ b/index.html
@@ -11,76 +11,20 @@
 </head>
 
 <body id="body">
-    <!-- <nav class="">
-    <h1 class="shadows">2020 Bootcamp</h1>
-    <h3 class="shadows">Flexbox: Layout Project #1</h3>
-  </nav> -->
+    <nav class="">
+        <h1 class="shadows">2020 Bootcamp</h1>
+        <h3 class="shadows">Portfolio Web Page</h3>
+    </nav>
 
-    <h1>Flexbox Multiple Media Queries</h1>
     <main>
-        <hr>
-        <!-- Learning code area -->
-        <!-- Flex container -->
-        <nav class="nav">
-            <div class="brand">
-                <!-- Flex Item -->
-                CSS Course
-            </div>
-            <div class="nav-buttons">
-                <!-- Flex Item -->
-                <a href="/register">Sign Up</a>
-                <a href="/login">Login</a>
-            </div>
-        </nav>
-        <div class="blue">
-            Blue section here.
-        </div>
+        <h6>Lesson Area</h6>
 
-
-        <!-- Flex Container -->
-        <div class="body">
-            <div class="left-column">
-                <!-- Flex Item -->
-                <h4>Navigation</h4>
-                <a href="">Nav 1</a>
-                <a href="">Nav 2</a>
-                <a href="">Nav 3</a>
-            </div>
-            <div class="center-column">
-                <!-- Flex Item -->
-                <h1>Hello World!</h1>
-                <p>This is a responsive website</p>
-            </div>
-            <div class="right-column">
-                <!-- Flex Item -->
-                Ad content in here.
-            </div>
-
-        </div>
-
-        <!-- Flex Container -->
-        <footer class="footer">
-            <div>
-                Column 1
-            </div>
-            <div>
-                Column 2
-            </div>
-            <div>
-                Column 3
-            </div>
-            <div>
-                Column 4
-            </div>
-        </footer>
-
-        <!-- Learning code area -->
-        <hr>
+        <h6>Lesson Area</h6>
     </main>
     <footer class="">
-        <!-- <div class="shadows">
-      Copyright &copy; 2019 All rights reserved | Carl R. Matson
-    </div> -->
+        <div class="shadows">
+            Copyright &copy; 2019 All rights reserved | Carl R. Matson
+        </div>
     </footer>
 </body>
 
