--- a/index.html
+++ b/index.html
@@ -13,21 +13,13 @@
 <body id="body">
     <nav class="">
         <h1 class="shadows">2020 Bootcamp</h1>
-        <h3 class="shadows">CRM Portfolio</h3>
+        <h3 class="shadows">Responsive Web Design</h3>
     </nav>
 
-    <main class="font-sans antialiased text-gray-100 leading-normal tracking-wider bg-cover" style="background-image: url('img/popew.jpg');">
-        <div class=".max-w-xl flex items-center h-auto lg:h-screen flex-wrap mx-auto  my-32 lg:my-0">
-
-            <div class="w-full lg:w-3/5 rounded-lg lg:rounded-l -lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-gray-900 opacity-75 mx-6  lg-0">
-                stuff here
-            </div>
-
-            <div class="w-full lg:w-2/5">
-                <img src="img/stone.png" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block" alt="" srcset=""/>
-            </div>
-       </div>
-        
+    <main>
+        <h6>Lesson Area</h6>
+        hi
+        <h6>Lesson Area</h6>
     </main>
     <footer class="">
         <div class="shadows">
