--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
 <body id="body">
     <nav class="">
         <h1 class="shadows">2020 Bootcamp</h1>
-        <h3 class="shadows">Responsive Web Design</h3>
+        <h3 class="shadows">Portfolio Webpage</h3>
     </nav>
 
     <main>
         <h6>Lesson Area</h6>
-        hi
+        <! -- Content column -->
+        <div class="w-full lg:w=3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2x1 bg-gray-900 opacity-75 mx-6 lg:mx-0">
+            <! -- Inner column -->
+            <div class="p-4 md:p-12 text-center lg:text-left">
+                <div class="block lg:hidden rounded-full shadoe-xl mx-auto -mt=16 h-48 bg-cover bg-center bg-center" style="background-image:  url('img/stone.png');">
+                <h1 class="text-3x1 font-bold text-white pt-8 lg:pt-0">Carl Matsom</h1>
+                <div class="mx-auto "></div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="w-full lg:w-2/5">
+            <img src="img/peasant.jpeg" class="rounded-none lg:rounded-lg shadow-2x1 hidden lg:block" alt="">
+        </div>
         <h6>Lesson Area</h6>
     </main>
     <footer class="">
